0.26
 - Fix module doc description in
   Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::GivenName::Douglas.

0.25 2023-04-17T11:28:59+02:00
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Reference::Wikidata::ReferenceURL.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Reference::Wikidata::VIAF.
 - Add item to doc SEE ALSO section in
   Wikibase::Datatype::Value::Globecoordinate.
 - Add reference to
   Test::Shared::Fixture::Wikibase::Datatype::Statement::Wikidata::SexOrGender::Male
   as example of statement with multiple references.
 - Add references parameter and method to MediainfoStatement.
 - Fix
   Test::Shared::Fixture::Wikibase::Datatype::MediainfoSnak::Commons::Depicts::Human
   object.
 - Sort usage modules in
   Test::Shared::Fixture::Wikibase::Datatype::Reference::Wikidata::VIAF.

0.24 2023-01-06T12:57:15+01:00
 - Add Czech description to
   Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog.
 - Add check for label length (250). If it's longer then strip.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog.
 - Change alias from 'pes' to 'pes domácí' in
   Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog.
 - Sort labels in
   Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog.
 - Update copyright years.
 - Update examples.

0.23 2022-11-06T11:03:06+01:00
 - Add cs label to
   Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog.

0.22 2022-10-19T11:07:21+02:00
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Mediainfo::Commons::ImageOfHuman.
 - Fix minimal version of Mo::utils.

0.21 2022-10-17T21:15:42+02:00
 - Add own list of language codes to fix issues with them.

0.20 2022-08-14T02:45:12+02:00
 - Improve SEE ALSO section in Value object.
 - Rename files in examples/ directory to better names.
 - Unify LICENSE AND COPYRIGHT section in doc.

0.19 2022-07-09T16:32:51+02:00
 - Add page_id to Lexeme.