@@ -33,6 +33,7 @@ examples/fixture_create_and_print_mediainfo_commons_imageofhuman.pl
 examples/fixture_create_and_print_reference_wd_url.pl
 examples/fixture_create_and_print_reference_wd_viaf.pl
 examples/fixture_create_and_print_snak_wd_givenname_douglas.pl
+examples/fixture_create_and_print_snak_wd_gramatical_gender_masculine.pl
 examples/fixture_create_and_print_snak_wd_image_dog.pl
 examples/fixture_create_and_print_value_item_wd_dog.pl
 examples/fixture_create_and_print_value_item_wd_douglas.pl
